# simulate-1380690

./: .gitignore  CMakeLists.txt  PROGRESS.md  PROMPT.md  README.md  RESULTS.md  final_positions.csv  initial.csv  output.csv
src/: main.cpp  renderer.cpp  renderer.h  simulation.cpp  simulation.h
tools/: assign_colors.py  generate_scene.py
